# MCP-Client

./: .gitignore  MathMCPserver.py  README.md  app.py  config.py  mcp_engine.py  pyproject.toml  servers.py
.github/workflows/: deploy.yml
frontend/: config.js  index.html  vercel.json
terminal MCP client/: MCPclient1.py  temp.py
